k8s/api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: visua-api
  labels:
    app: visua-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
  selector:
    app: visua-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: visua-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: visua-api
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: visua-api
        image: visua-api
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
